# speady

./: .gitignore  main.py  readme.md  requirements.txt  setup.cfg  setup.py
src/: pearson.c  pearson.pyx  speady.c
