[metadata]
name = speady
version = 0.0.1
description = A pearson correlation implementation in Cython.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Nishant Jha
author_email = njha@broadinstitute.org
url = https://github.com/broadinstitute/speady

[options]
zip_safe = False
python_requires = >=3.6
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.h
cypack = data/*